# elbow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
benchmarks/json/: benchmark.py  make_data.py
elbow/: __init__.py  builders.py  dtype_inference.py  inference.py  loaders.py  pipeline.py  record.py  utils.py
elbow/dtypes/: inference.py
elbow/extractors/: base.py  file_meta.py  meta.py
elbow/filters/: meta.py
elbow/sources/: filesystem.py
example/: README.md  example.py
tests/: test_builders.py  test_loaders.py  test_record.py  test_utils.py  utils_for_tests.py
tests/test_dtypes/: test_extensions.py  test_inference.py
tests/test_extractors/: test_meta.py
tests/test_sources/: test_filesystem.py
