[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "elbow"
description = "Lift special-purpose data into common tabular formats for analytics 💪"
authors = [
    {name = "Connor Lane", email = "connor.lane858@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typing_extensions",
    "numpy",
    "pandas",
    "pyarrow",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
]
dev = [
    "mypy==1.2.0",
    "ruff==0.5.5",
    "pre-commit",
    "setuptools-scm",
]

[project.urls]
"Homepage" = "https://github.com/childmindresearch/elbow"

[tool.setuptools_scm]
write_to = "elbow/_version.py"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []
